--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@popperjs/core": "^2.11.8",
     "ajv": "^6.12.6",
     "bootstrap": "^5.3.1",
-    "ngx-print": "1.2.1",
+    "ngx-print": "^1.2.1",
     "ngx-select-dropdown": "^3.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.6.1",
